--- a/client/scss/modals/_mainModal.scss
+++ b/client/scss/modals/_mainModal.scss
@@ -17,7 +17,7 @@
     overflow: hidden;
     .about-content {
       height: 100%;
-      overflow: scroll;
+      overflow-y: scroll;
       padding-right: 10px;
     }
   }
